--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="Matrix Eisenhower">
       <a class="more_inf"
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?</a>
@@ -16,7 +16,7 @@
       <p id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -28,7 +28,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove button">
           </button>
         </li>
         <li class="editMode">
@@ -37,7 +37,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove button">
           </button>
         </li>
       </ul>
@@ -49,7 +49,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove button">
           </button>
         </li>
       </ul>
