--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="./css/style.css" media="screen" charset="utf-8">
   </head>
   <body>
     <div class="aaa">
-      <img src="./eisenhower-matrix.jpg" alt="Matrix Eisenhower">
+      <img src="./assets/eisenhower-matrix.jpg" alt="Matrix Eisenhower">
       <a class="more_inf"
           href="https://goal-life.com/page/method/matrix-eisenhower">
           Want more details?</a>
@@ -28,7 +28,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg" alt="Remove button">
+            <img src="./assets/remove.svg" alt="Remove button">
           </button>
         </li>
         <li class="editMode">
@@ -37,7 +37,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg" alt="Remove button">
+            <img src="./assets/remove.svg" alt="Remove button">
           </button>
         </li>
       </ul>
@@ -49,11 +49,11 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg" alt="Remove button">
+            <img src="./assets/remove.svg" alt="Remove button">
           </button>
         </li>
       </ul>
     </div>
-    <script src="app.js"></script>
+    <script src="./js/app.js"></script>
   </body>
 </html>
