--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <header class="header">
       <img class="header__img" src="./assets/eisenhower-matrix.jpg" alt="Matrix Eisenhower">
       <a class="header__link"
