refactor: rename class with BEM to rule 3.1 and rule advanced 2.1 in clean-code-s1e1.md

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                   alt="Remove button">
             </button>
           </li>
-          <li class="task-list editMode">
+          <li class="task-list task-list__edit">
             <input type="checkbox" class="task-list__checkbox">
             <label class="task-list__task task__label">Go Shopping</label>
             <input type="text" value="Go Shopping"
