refactor: rename class with BEM to rule 3.1 and rule advanced 2.1 in clean-code-s1e1.md

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <button class="button">Add</button>
         </div>
       </section>
-      <section>
+      <section class="tasks-list">
         <h3 class="h3">Todo</h3>
-        <ul id="incompleteTasks">
+        <ul class="tasks-list__uncomplete">
           <li class="task-list">
             <input type="checkbox" class="task-list__checkbox">
             <label class="task-list__task task__label">Pay Bills</label>
@@ -47,9 +47,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="tasks-list">
         <h3 class="h3">Completed</h3>
-        <ul id="completed-tasks">
+        <ul class="tasks-list__complete">
           <li class="task-list">
             <input type="checkbox" class="task-list__checkbox" checked>
             <label class="task-list__task task__label">See the Doctor</label>
