refactor: rename class with BEM to rule 3.1 and rule advanced 2.1 in clean-code-s1e1.md

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <button class="button">Add</button>
         </div>
       </section>
-      <section class="tasks-list">
+      <section>
         <h3 class="h3">Todo</h3>
-        <ul class="tasks-list__uncomplete">
+        <ul class="tasks-list_uncomplete">
           <li class="task-list">
             <input type="checkbox" class="task-list__checkbox">
             <label class="task-list__task task__label">Pay Bills</label>
@@ -34,7 +34,7 @@
                   alt="Remove button">
             </button>
           </li>
-          <li class="task-list task-list__edit">
+          <li class="task-list task-list_edit">
             <input type="checkbox" class="task-list__checkbox">
             <label class="task-list__task task__label">Go Shopping</label>
             <input type="text" value="Go Shopping"
@@ -47,9 +47,9 @@
           </li>
         </ul>
       </section>
-      <section class="tasks-list">
+      <section>
         <h3 class="h3">Completed</h3>
-        <ul class="tasks-list__complete">
+        <ul class="tasks-list_complete">
           <li class="task-list">
             <input type="checkbox" class="task-list__checkbox" checked>
             <label class="task-list__task task__label">See the Doctor</label>
